[package]
name = "judge"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.11"
aws-sdk-sqs = "1.90.0"
base64 = "0.22.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
